# IntelliP

./: .gitignore  README.md  pyproject.toml  requirements.txt
crawling/: crawling_request.py  crawling_selenium.py
src/intellip/: app.py  crawler.py  embedding.py  rag.py
