[project]
name = "IntelliP"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Sanggyu Lee", email = "sanggyu523@naver.com"},
    {name = "Sumin Seo"},
    {name = "Yunhyeong Seo"},
    {name = "Changmin Jeon"},
    {name = "Lauren Minjung Kwon"},
]
dependencies = [
    "langchain-upstage>=0.1.5",
    "requests>=2.31.0",
    "bs4>=0.0.2",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false
