[project]
name = "IntelliP"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Sanggyu Lee", email = "sanggyu523@naver.com"},
    {name = "Sumin Seo"},
    {name = "Yunhyeong Seo"},
    {name = "Changmin Jeon"},
    {name = "Lauren Minjung Kwon"},
]
dependencies = [
    "langchain-upstage>=0.1.5",
    "requests>=2.31.0",
    "bs4>=0.0.2",
    "gradio>=4.31.4",
    "langchain>=0.2.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "jupyter>=1.0.0",
]
